[package]
name = "range-set"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"], optional = true }
step = "0.2.0"

[dev-dependencies]
test-case = "1.2.0"

